basic crud operation and jwt authencation setup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=Airbng-backend
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/airbnb
+spring.datasource.username=root
+spring.datasource.password=Rahul@123
+
+
+
+
+spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.show-sql=true
+jwt.secret=TmV3U2VjcmV0S2V5Rm9ySldUU2lnbmluZ1B1cnBvc2VzMTIzNDU2Nzg=
+
